feature : 스케줄러 controller 분리 및 테스트 코드 추가