@@ -8,9 +8,6 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.never;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
@@ -30,13 +27,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.test.util.ReflectionTestUtils;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import jabaclass.product.application.acl.SellerRepository;
 import jabaclass.product.application.exception.BusinessException;
@@ -44,7 +35,6 @@ import jabaclass.product.application.service.AuditorAwareService;
 import jabaclass.product.application.service.ScheduleService;
 import jabaclass.product.application.usecase.ProductUseCase;
 import jabaclass.product.application.usecase.ProductUserUseCase;
-import jabaclass.product.application.usecase.ScheduleUseCase;
 import jabaclass.product.common.exception.CommonErrorCode;
 import jabaclass.product.domain.model.Product;
 import jabaclass.product.domain.model.ProductUser;
@@ -54,7 +44,6 @@ import jabaclass.product.domain.model.status.ProductStatus;
 import jabaclass.product.domain.model.status.ReservedStatus;
 import jabaclass.product.domain.repository.ScheduleRepository;
 import jabaclass.product.infrastructure.acl.dto.response.UserResponseDto;
-import jabaclass.product.presentation.ProductRestController;
 import jabaclass.product.presentation.dto.request.CreateProductUserRequestDto;
 import jabaclass.product.presentation.dto.request.CreateScheduleRequestDto;
 import jabaclass.product.presentation.dto.request.OrderRequestDto;
@@ -74,9 +63,6 @@ class ScheduleTest {
 	@InjectMocks
 	private ScheduleService scheduleService;
 
-	@InjectMocks
-	private ProductRestController productRestController;
-
 	@Mock
 	private ScheduleRepository scheduleRepository;
 
@@ -95,9 +81,6 @@ class ScheduleTest {
 	@Mock
 	private AuditorAwareService auditorAwareService;
 
-	@Mock
-	private ScheduleUseCase scheduleUseCase;
-
 	private static final UUID SELLER_ID = UUID.fromString("123e4567-e89b-12d3-a456-426614174000");
 	private static final UUID PRODUCT_ID = UUID.fromString("223e4567-e89b-12d3-a456-426614174000");
 	private static final UUID SCHEDULE_ID = UUID.fromString("323e4567-e89b-12d3-a456-426614174000");
@@ -105,10 +88,7 @@ class ScheduleTest {
 	private static final UUID PRODUCT_USER_ID = UUID.fromString("523e4567-e89b-12d3-a456-426614174000");
 	private static final BigDecimal PRICE = new BigDecimal("1000.50");
 
-	private final ObjectMapper objectMapper = new ObjectMapper();
-
 	private Validator validator;
-	private MockMvc mockMvc;
 	private Product product;
 	private Schedule schedule;
 	private CreateScheduleRequestDto createRequest;
@@ -117,7 +97,6 @@ class ScheduleTest {
 	@BeforeEach
 	void setUp() {
 		validator = Validation.buildDefaultValidatorFactory().getValidator();
-		mockMvc = MockMvcBuilders.standaloneSetup(productRestController).build();
 
 		product = Product.builder()
 			.id(PRODUCT_ID)
@@ -157,7 +136,7 @@ class ScheduleTest {
 
 	@Test
 	void 일정_생성에_성공한다() {
-		prepareAuthorizedSellerAndOwnedProduct();
+		권한있는_판매자와_본인상품을_준비한다();
 		given(scheduleRepository.findConflictSchedules(
 			eq(PRODUCT_ID),
 			eq(LocalDate.parse(createRequest.scheduleDt())),
@@ -167,51 +146,35 @@ class ScheduleTest {
 		given(scheduleRepository.save(any(Schedule.class)))
 			.willAnswer(invocation -> {
 				Schedule saved = invocation.getArgument(0);
-				ReflectionTestUtils.setField(saved, "id", UUID.randomUUID());
+				ReflectionTestUtils.setField(saved, "id", SCHEDULE_ID);
 				return saved;
 			});
 
 		SchedulesResponseDto result = scheduleService.create(createRequest, PRODUCT_ID);
 
+		assertThat(result.id()).isEqualTo(SCHEDULE_ID);
 		assertThat(result.productId()).isEqualTo(PRODUCT_ID);
-		assertThat(result.scheduleDt()).isEqualTo(LocalDate.parse(createRequest.scheduleDt()));
-		assertThat(result.startTime()).isEqualTo(LocalTime.parse(createRequest.startTime()));
-		assertThat(result.endTime()).isEqualTo(LocalTime.parse(createRequest.endTime()));
-		assertThat(result.maxCapacity()).isEqualTo(product.getMaxCapacity());
+		assertThat(result.maxCapacity()).isEqualTo(10);
 	}
 
 	@Test
 	void 존재하지_않는_날짜면_일정_생성에_실패한다() {
-		CreateScheduleRequestDto request = new CreateScheduleRequestDto(
-			"2026-02-30",
-			"10:00",
-			"12:00",
-			ReservedStatus.AVAILABLE
-		);
-		prepareAuthorizedSellerAndOwnedProduct();
+		CreateScheduleRequestDto request = new CreateScheduleRequestDto("2026-02-30", "10:00", "12:00",
+			ReservedStatus.AVAILABLE);
+		권한있는_판매자와_본인상품을_준비한다();
 
-		assertBusinessException(
-			() -> scheduleService.create(request, PRODUCT_ID),
-			HttpStatus.BAD_REQUEST,
-			CommonErrorCode.DATE_BAD_FORMAT
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.create(request, PRODUCT_ID), HttpStatus.BAD_REQUEST,
+			CommonErrorCode.DATE_BAD_FORMAT);
 	}
 
 	@Test
 	void 날짜_형식이_올바르지_않으면_일정_생성에_실패한다() {
-		CreateScheduleRequestDto request = new CreateScheduleRequestDto(
-			"2026/03/26",
-			"10:00",
-			"12:00",
-			ReservedStatus.AVAILABLE
-		);
-		prepareAuthorizedSellerAndOwnedProduct();
+		CreateScheduleRequestDto request = new CreateScheduleRequestDto("2026/03/30", "10:00", "12:00",
+			ReservedStatus.AVAILABLE);
+		권한있는_판매자와_본인상품을_준비한다();
 
-		assertBusinessException(
-			() -> scheduleService.create(request, PRODUCT_ID),
-			HttpStatus.BAD_REQUEST,
-			CommonErrorCode.DATE_BAD_FORMAT
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.create(request, PRODUCT_ID), HttpStatus.BAD_REQUEST,
+			CommonErrorCode.DATE_BAD_FORMAT);
 	}
 
 	@Test
@@ -222,35 +185,29 @@ class ScheduleTest {
 			"12:00",
 			ReservedStatus.AVAILABLE
 		);
-		prepareAuthorizedSellerAndOwnedProduct();
+		권한있는_판매자와_본인상품을_준비한다();
 
-		assertBusinessException(
-			() -> scheduleService.create(request, PRODUCT_ID),
-			HttpStatus.BAD_REQUEST,
-			CommonErrorCode.TIME_BAD_FORMAT
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.create(request, PRODUCT_ID), HttpStatus.BAD_REQUEST,
+			CommonErrorCode.TIME_BAD_FORMAT);
 	}
 
 	@Test
 	void 겹치는_일정이_있으면_일정_생성에_실패한다() {
-		prepareAuthorizedSellerAndOwnedProduct();
+		권한있는_판매자와_본인상품을_준비한다();
 		given(scheduleRepository.findConflictSchedules(
 			eq(PRODUCT_ID),
 			eq(LocalDate.parse(createRequest.scheduleDt())),
 			eq(LocalTime.parse(createRequest.startTime())),
 			eq(LocalTime.parse(createRequest.endTime()))
-		)).willReturn(Collections.singletonList(schedule));
+		)).willReturn(List.of(schedule));
 
-		assertBusinessException(
-			() -> scheduleService.create(createRequest, PRODUCT_ID),
-			HttpStatus.BAD_REQUEST,
-			CommonErrorCode.SCHEDULE_CONFLICT
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.create(createRequest, PRODUCT_ID), HttpStatus.BAD_REQUEST,
+			CommonErrorCode.SCHEDULE_CONFLICT);
 	}
 
 	@Test
 	void 일정_수정에_성공한다() {
-		prepareAuthorizedSellerAndOwnedProduct();
+		권한있는_판매자와_본인상품을_준비한다();
 		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.of(schedule));
 		given(scheduleRepository.findConflictSchedulesNoId(
 			eq(PRODUCT_ID),
@@ -263,63 +220,43 @@ class ScheduleTest {
 		SchedulesResponseDto result = scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID);
 
 		assertThat(result.id()).isEqualTo(SCHEDULE_ID);
-		assertThat(result.startTime()).isEqualTo(LocalTime.parse("13:00"));
-		assertThat(result.endTime()).isEqualTo(LocalTime.parse("14:00"));
+		assertThat(result.startTime()).isEqualTo(LocalTime.of(13, 0));
+		assertThat(result.endTime()).isEqualTo(LocalTime.of(14, 0));
 		assertThat(result.maxCapacity()).isEqualTo(5);
-		assertThat(schedule.getStatus()).isEqualTo(ReservedStatus.CLOSED);
 	}
 
 	@Test
 	void 수정할_일정이_없으면_일정_수정에_실패한다() {
-		prepareAuthorizedSellerAndOwnedProduct();
+		권한있는_판매자와_본인상품을_준비한다();
 		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.empty());
 
-		assertBusinessException(
-			() -> scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID),
-			HttpStatus.NOT_FOUND,
-			CommonErrorCode.SCHDULES_NOT_FOUND
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID), HttpStatus.NOT_FOUND,
+			CommonErrorCode.SCHDULES_NOT_FOUND);
 	}
 
 	@Test
 	void 수정_시간_형식이_올바르지_않으면_일정_수정에_실패한다() {
-		UpdateScheduleRequestDto request = new UpdateScheduleRequestDto(
-			"99:99",
-			"14:00",
-			ReservedStatus.AVAILABLE,
-			5
-		);
-		prepareAuthorizedSellerAndOwnedProduct();
+		UpdateScheduleRequestDto request = new UpdateScheduleRequestDto("99:99", "14:00", ReservedStatus.AVAILABLE, 5);
+		권한있는_판매자와_본인상품을_준비한다();
 		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.of(schedule));
 
-		assertBusinessException(
-			() -> scheduleService.update(request, PRODUCT_ID, SCHEDULE_ID),
-			HttpStatus.BAD_REQUEST,
-			CommonErrorCode.TIME_BAD_FORMAT
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.update(request, PRODUCT_ID, SCHEDULE_ID), HttpStatus.BAD_REQUEST,
+			CommonErrorCode.TIME_BAD_FORMAT);
 	}
 
 	@Test
 	void 수정_시작시간이_종료시간과_같거나_늦으면_일정_수정에_실패한다() {
-		UpdateScheduleRequestDto request = new UpdateScheduleRequestDto(
-			"14:00",
-			"14:00",
-			ReservedStatus.AVAILABLE,
-			5
-		);
-		prepareAuthorizedSellerAndOwnedProduct();
+		UpdateScheduleRequestDto request = new UpdateScheduleRequestDto("14:00", "14:00", ReservedStatus.AVAILABLE, 5);
+		권한있는_판매자와_본인상품을_준비한다();
 		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.of(schedule));
 
-		assertBusinessException(
-			() -> scheduleService.update(request, PRODUCT_ID, SCHEDULE_ID),
-			HttpStatus.BAD_REQUEST,
-			CommonErrorCode.INVALID_TIME_RANGE
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.update(request, PRODUCT_ID, SCHEDULE_ID), HttpStatus.BAD_REQUEST,
+			CommonErrorCode.INVALID_TIME_RANGE);
 	}
 
 	@Test
 	void 겹치는_수정_일정이_있으면_일정_수정에_실패한다() {
-		prepareAuthorizedSellerAndOwnedProduct();
+		권한있는_판매자와_본인상품을_준비한다();
 		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.of(schedule));
 		given(scheduleRepository.findConflictSchedulesNoId(
 			eq(PRODUCT_ID),
@@ -327,22 +264,10 @@ class ScheduleTest {
 			eq(LocalTime.parse(updateRequest.startTime())),
 			eq(LocalTime.parse(updateRequest.endTime())),
 			eq(SCHEDULE_ID)
-		)).willReturn(Collections.singletonList(
-			Schedule.builder()
-				.productId(PRODUCT_ID)
-				.scheduleDt(schedule.getScheduleDt())
-				.startTime(LocalTime.of(13, 30))
-				.endTime(LocalTime.of(14, 30))
-				.status(ReservedStatus.AVAILABLE)
-				.maxCapacity(10)
-				.build()
-		));
+		)).willReturn(List.of(schedule));
 
-		assertBusinessException(
-			() -> scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID),
-			HttpStatus.BAD_REQUEST,
-			CommonErrorCode.SCHEDULE_CONFLICT
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID), HttpStatus.BAD_REQUEST,
+			CommonErrorCode.SCHEDULE_CONFLICT);
 	}
 
 	@Test
@@ -351,11 +276,8 @@ class ScheduleTest {
 		given(sellerRepository.findSeller(SELLER_ID))
 			.willReturn(Optional.of(new UserResponseDto(SELLER_ID, "user", "USER")));
 
-		assertBusinessException(
-			() -> scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID),
-			HttpStatus.FORBIDDEN,
-			CommonErrorCode.NOT_SELLER
-		);
+		비즈니스_예외를_검증한다(() -> scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID), HttpStatus.FORBIDDEN,
+			CommonErrorCode.NOT_SELLER);
 	}
 
 	@Test
@@ -366,48 +288,13 @@ class ScheduleTest {
 		given(productUseCase.findByIdOrThrow(PRODUCT_ID))
 			.willThrow(new BusinessException(CommonErrorCode.PRODUCT_NOT_FOUND));
 
-		assertBusinessException(
-			() -> scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID),
-			HttpStatus.NOT_FOUND,
-			CommonErrorCode.PRODUCT_NOT_FOUND
-		);
-	}
-
-	@Test
-	void 수정_요청이_들어오면_컨트롤러가_유스케이스를_호출한다() throws Exception {
-		SchedulesResponseDto response = new SchedulesResponseDto(
-			SCHEDULE_ID,
-			PRODUCT_ID,
-			LocalDate.now().plusDays(1),
-			LocalTime.of(13, 0),
-			LocalTime.of(14, 0),
-			"CLOSED",
-			5,
-			SELLER_ID,
-			LocalDateTime.now(),
-			SELLER_ID,
-			LocalDateTime.now()
-		);
-		given(scheduleUseCase.update(any(UpdateScheduleRequestDto.class), eq(PRODUCT_ID), eq(SCHEDULE_ID)))
-			.willReturn(response);
-
-		mockMvc.perform(put("/api/v1/products/{productId}/schedules/{scheduleId}", PRODUCT_ID, SCHEDULE_ID)
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(objectMapper.writeValueAsString(updateRequest)))
-			.andExpect(status().isOk())
-			.andExpect(content().string(org.hamcrest.Matchers.containsString(PRODUCT_ID.toString())));
-
-		then(scheduleUseCase).should().update(any(UpdateScheduleRequestDto.class), eq(PRODUCT_ID), eq(SCHEDULE_ID));
+		비즈니스_예외를_검증한다(() -> scheduleService.update(updateRequest, PRODUCT_ID, SCHEDULE_ID), HttpStatus.NOT_FOUND,
+			CommonErrorCode.PRODUCT_NOT_FOUND);
 	}
 
 	@Test
 	void 수정_DTO에서_형식이_올바르지_않으면_검증에_실패한다() {
-		UpdateScheduleRequestDto request = new UpdateScheduleRequestDto(
-			"9:00",
-			"14-00",
-			ReservedStatus.AVAILABLE,
-			0
-		);
+		UpdateScheduleRequestDto request = new UpdateScheduleRequestDto("9:00", "14-00", ReservedStatus.AVAILABLE, 0);
 
 		Set<ConstraintViolation<UpdateScheduleRequestDto>> violations = validator.validate(request);
 
@@ -419,13 +306,7 @@ class ScheduleTest {
 
 	@Test
 	void 예약_검증에_성공하면_예약을_생성하고_true를_반환한다() {
-		OrderRequestDto request = new OrderRequestDto(
-			SCHEDULE_ID,
-			USER_ID,
-			OrderStatus.PENDING,
-			3,
-			null
-		);
+		OrderRequestDto request = new OrderRequestDto(SCHEDULE_ID, USER_ID, OrderStatus.PENDING, 3, null);
 		ProductUser paidUser = ProductUser.builder()
 			.productScheduleId(SCHEDULE_ID)
 			.userId(UUID.randomUUID())
@@ -448,22 +329,14 @@ class ScheduleTest {
 
 		OrderResponseDto result = scheduleService.verification(request);
 
-		assertThat(result.quantity()).isEqualTo(3);
 		assertThat(result.valid()).isTrue();
 		assertThat(result.productUserId()).isEqualTo(PRODUCT_USER_ID);
-		assertThat(result.price()).isEqualByComparingTo(PRICE);
 		then(productUserUseCase).should().create(any(CreateProductUserRequestDto.class));
 	}
 
 	@Test
 	void 예약_수량이_재고보다_많으면_false를_반환한다() {
-		OrderRequestDto request = new OrderRequestDto(
-			SCHEDULE_ID,
-			USER_ID,
-			OrderStatus.PENDING,
-			11,
-			null
-		);
+		OrderRequestDto request = new OrderRequestDto(SCHEDULE_ID, USER_ID, OrderStatus.PENDING, 11, null);
 		ProductUser paidUser = ProductUser.builder()
 			.productScheduleId(SCHEDULE_ID)
 			.userId(UUID.randomUUID())
@@ -476,30 +349,21 @@ class ScheduleTest {
 
 		OrderResponseDto result = scheduleService.verification(request);
 
-		assertThat(result.quantity()).isEqualTo(11);
 		assertThat(result.valid()).isFalse();
 		assertThat(result.productUserId()).isNull();
-		assertThat(result.price()).isEqualByComparingTo(PRICE);
-		then(productUserUseCase).should().innserUserList(SCHEDULE_ID);
 		then(productUserUseCase).should(never()).create(any(CreateProductUserRequestDto.class));
 	}
 
 	@Test
-	void 예약_검증시_pending예약도_남은_재고에서_차감한다() {
-		OrderRequestDto request = new OrderRequestDto(
-			SCHEDULE_ID,
-			USER_ID,
-			OrderStatus.PENDING,
-			7,
-			null
-		);
+	void 예약_검증시_pending_예약도_재고에서_차감한다() {
+		OrderRequestDto request = new OrderRequestDto(SCHEDULE_ID, USER_ID, OrderStatus.PENDING, 7, null);
 		ProductUser pendingUser = ProductUser.builder()
 			.productScheduleId(SCHEDULE_ID)
 			.userId(UUID.randomUUID())
 			.guestCount(4)
 			.status(OrderStatus.PENDING)
 			.build();
-		given(scheduleRepository.findById(SCHEDULE_ID)).willReturn(Optional.of(schedule));
+		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.of(schedule));
 		given(productUserUseCase.innserUserList(SCHEDULE_ID)).willReturn(List.of(pendingUser));
 		given(productUseCase.findByIdOrThrow(PRODUCT_ID)).willReturn(product);
 
@@ -519,25 +383,18 @@ class ScheduleTest {
 			.status(OrderStatus.PAID)
 			.build();
 		ReflectionTestUtils.setField(productUser, "id", PRODUCT_USER_ID);
-		OrderRequestDto request = new OrderRequestDto(
-			SCHEDULE_ID,
-			USER_ID,
-			OrderStatus.REFUNDED,
-			2,
-			PRODUCT_USER_ID
-		);
+		OrderRequestDto request = new OrderRequestDto(SCHEDULE_ID, USER_ID, OrderStatus.REFUNDED, 2, PRODUCT_USER_ID);
 		given(productUserUseCase.innerFindById(PRODUCT_USER_ID)).willReturn(productUser);
-		given(scheduleRepository.findById(SCHEDULE_ID)).willReturn(Optional.of(schedule));
+		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.of(schedule));
 		given(productUserUseCase.innserUserList(SCHEDULE_ID)).willReturn(List.of(productUser));
 
 		scheduleService.restoringInventory(request);
 
 		assertThat(productUser.getStatus()).isEqualTo(OrderStatus.REFUNDED);
-		then(productUserUseCase).should().innerFindById(PRODUCT_USER_ID);
 	}
 
 	@Test
-	void 환불시_남은예약을_다시계산해_full상태를_available로_복구한다() {
+	void 환불후_예약을_다시_계산해_full상태를_available로_복구한다() {
 		ProductUser refundedUser = ProductUser.builder()
 			.productScheduleId(SCHEDULE_ID)
 			.userId(USER_ID)
@@ -553,7 +410,7 @@ class ScheduleTest {
 		ReflectionTestUtils.setField(refundedUser, "id", PRODUCT_USER_ID);
 		schedule.changeStatus(ReservedStatus.FULL);
 		given(productUserUseCase.innerFindById(PRODUCT_USER_ID)).willReturn(refundedUser);
-		given(scheduleRepository.findById(SCHEDULE_ID)).willReturn(Optional.of(schedule));
+		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.of(schedule));
 		given(productUserUseCase.innserUserList(SCHEDULE_ID)).willReturn(List.of(refundedUser, activeUser));
 
 		scheduleService.refundReservation(PRODUCT_USER_ID);
@@ -563,49 +420,14 @@ class ScheduleTest {
 	}
 
 	@Test
-	void 예약_검증_요청이_들어오면_컨트롤러가_유스케이스를_호출한다() {
-		OrderRequestDto request = new OrderRequestDto(
-			SCHEDULE_ID,
-			USER_ID,
-			OrderStatus.PENDING,
-			2,
-			null
-		);
-		OrderResponseDto response = new OrderResponseDto(PRICE, 2, true, PRODUCT_USER_ID);
-		given(scheduleUseCase.verification(request)).willReturn(response);
-
-		ResponseEntity<OrderResponseDto> result = productRestController.schedulesReservations(request);
-
-		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		assertThat(result.getBody()).isEqualTo(response);
-		then(scheduleUseCase).should().verification(request);
-	}
-
-	@Test
-	void 재고_복원_요청이_들어오면_컨트롤러가_유스케이스를_호출한다() {
-		OrderRequestDto request = new OrderRequestDto(
-			SCHEDULE_ID,
-			USER_ID,
-			OrderStatus.REFUNDED,
-			2,
-			PRODUCT_USER_ID
-		);
-
-		productRestController.schedulesVerification(request);
-
-		then(scheduleUseCase).should().restoringInventory(request);
-	}
-
-	@Test
 	void 일정_삭제에_성공한다() {
-		prepareAuthorizedSellerAndOwnedProduct();
+		권한있는_판매자와_본인상품을_준비한다();
 		given(scheduleRepository.findByIdAndDeleteDtIsNull(SCHEDULE_ID)).willReturn(Optional.of(schedule));
 
 		DeleteScheduleResposeDto result = scheduleService.delete(PRODUCT_ID, SCHEDULE_ID);
 
 		assertThat(result.scheduleId()).isEqualTo(SCHEDULE_ID);
 		assertThat(result.status()).isEqualTo(ReservedStatus.CLOSED);
-		assertThat(schedule.getStatus()).isEqualTo(ReservedStatus.CLOSED);
 		assertThat(schedule.getDeleteDt()).isNotNull();
 	}
 
@@ -620,70 +442,11 @@ class ScheduleTest {
 			.maxCapacity(8)
 			.build();
 		ReflectionTestUtils.setField(secondSchedule, "id", UUID.randomUUID());
-		given(scheduleRepository.findByProductIdAndDeleteDtIsNull(PRODUCT_ID))
-			.willReturn(List.of(schedule, secondSchedule));
+		given(scheduleRepository.findByProductIdAndDeleteDtIsNull(PRODUCT_ID)).willReturn(List.of(schedule, secondSchedule));
 
 		List<SchedulesResponseDto> result = scheduleService.schedulesList(PRODUCT_ID);
 
 		assertThat(result).hasSize(2);
-		assertThat(result).extracting(SchedulesResponseDto::productId).containsOnly(PRODUCT_ID);
-	}
-
-	@Test
-	void 삭제_요청이_들어오면_컨트롤러가_유스케이스를_호출한다() {
-		DeleteScheduleResposeDto response = DeleteScheduleResposeDto.from(SCHEDULE_ID, ReservedStatus.CLOSED);
-		given(scheduleUseCase.delete(PRODUCT_ID, SCHEDULE_ID)).willReturn(response);
-
-		ResponseEntity<?> result = productRestController.schedulesDelete(PRODUCT_ID, SCHEDULE_ID);
-
-		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		then(scheduleUseCase).should().delete(PRODUCT_ID, SCHEDULE_ID);
-	}
-
-	@Test
-	void 목록_조회_요청이_들어오면_컨트롤러가_유스케이스를_호출한다() {
-		List<SchedulesResponseDto> response = List.of(
-			new SchedulesResponseDto(
-				SCHEDULE_ID,
-				PRODUCT_ID,
-				LocalDate.now().plusDays(1),
-				LocalTime.of(10, 0),
-				LocalTime.of(12, 0),
-				"AVAILABLE",
-				10,
-				SELLER_ID,
-				LocalDateTime.now(),
-				SELLER_ID,
-				LocalDateTime.now()
-			)
-		);
-		given(scheduleUseCase.schedulesList(PRODUCT_ID)).willReturn(response);
-
-		ResponseEntity<?> result = productRestController.schedulesSelectList(PRODUCT_ID);
-
-		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		then(scheduleUseCase).should().schedulesList(PRODUCT_ID);
-	}
-
-	@Test
-	void 일정별_예약자_조회_요청이_들어오면_유스케이스를_호출한다() {
-		List<ProductUserResponseDto> response = List.of(
-			new ProductUserResponseDto(
-				PRODUCT_USER_ID,
-				SCHEDULE_ID,
-				"user",
-				2,
-				OrderStatus.PAID.getStatusName(),
-				USER_ID,
-				null
-			)
-		);
-		given(productUserUseCase.getUser(SCHEDULE_ID)).willReturn(response);
-
-		ResponseEntity<?> result = productRestController.schedulesSelectUser(SCHEDULE_ID);
-
-		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		then(productUserUseCase).should().getUser(SCHEDULE_ID);
 	}
 
 	@Test
@@ -706,30 +469,11 @@ class ScheduleTest {
 		AvailabilityScheduleResponseDto result = scheduleService.availabilitySchedule(SCHEDULE_ID);
 
 		assertThat(result.scheduleId()).isEqualTo(SCHEDULE_ID);
-		assertThat(result.reservationStatus()).isEqualTo(ReservedStatus.AVAILABLE);
-		assertThat(result.maxCapacity()).isEqualTo(10);
 		assertThat(result.reservedCount()).isEqualTo(4);
 		assertThat(result.remainingCount()).isEqualTo(6);
 	}
 
-	@Test
-	void 일정별_예약_상태_조회_요청이_들어오면_유스케이스를_호출한다() {
-		AvailabilityScheduleResponseDto response = new AvailabilityScheduleResponseDto(
-			SCHEDULE_ID,
-			ReservedStatus.AVAILABLE,
-			10,
-			4,
-			6
-		);
-		given(scheduleUseCase.availabilitySchedule(SCHEDULE_ID)).willReturn(response);
-
-		ResponseEntity<?> result = productRestController.schedulesaAvailability(SCHEDULE_ID);
-
-		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		then(scheduleUseCase).should().availabilitySchedule(SCHEDULE_ID);
-	}
-
-	private void prepareAuthorizedSellerAndOwnedProduct() {
+	private void 권한있는_판매자와_본인상품을_준비한다() {
 		given(auditorAwareService.getCurrentAuditor()).willReturn(Optional.of(SELLER_ID));
 		given(sellerRepository.findSeller(eq(SELLER_ID)))
 			.willReturn(Optional.of(new UserResponseDto(SELLER_ID, "seller", "SELLER")));
@@ -737,7 +481,7 @@ class ScheduleTest {
 		lenient().when(productUseCase.matchProductAndSellerId(eq(PRODUCT_ID), eq(SELLER_ID))).thenReturn(product);
 	}
 
-	private void assertBusinessException(ThrowingCall call, HttpStatus status, CommonErrorCode errorCode) {
+	private void 비즈니스_예외를_검증한다(ThrowingCall call, HttpStatus status, CommonErrorCode errorCode) {
 		assertThatThrownBy(call::invoke)
 			.isInstanceOf(BusinessException.class)
 			.hasMessage(errorCode.getMessage())
